# opendocker

./: .gitignore  README.md  config.example.yaml  enviroment.yaml  pyproject.toml
opendocker/: __init__.py  cli.py  pipeline.py
